fixed manifest and rc files. notes: 1. windows assembly version can only be x.x.x.x or program won't start. read logs in "event logger" can help a lot; 2. resdefines at least in VS doesn't work at all, but defines will be passed on to res.exe so it's fine

--- a/etc/clumsy.rc
+++ b/etc/clumsy.rc
@@ -44,9 +44,12 @@ END
 /****************************************************/
 /* The following lines will enable Windows XP/Vista Visual Styles */
 
-#ifdef INCLUDE_MANIFEST32
+#ifdef X64
+/* 64 bit */
+1 24 "clumsy64.manifest"
+#else
+/* 32 bit */
 1 24 "clumsy.manifest"
 #endif
-*/
 
 /****************************************************/
